--- a/8-Bit Work Space/nbproject/private/private.properties
+++ b/8-Bit Work Space/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Grant Ivan\\AppData\\Roaming\\NetBeans\\26\\build.properties
+user.properties.file=/Users/sofiapalanca/Library/Application Support/NetBeans/26/build.properties
